@@ -13,7 +13,6 @@ programming language using the HTTP REST API.
 ```shell
 
 export GEMFIRE_HOME=/Users/devtools/repositories/IMDG/gemfire/pivotal-gemfire-9.10.10
-
 cd $GEMFIRE_HOME/bin
 ```
 
@@ -27,10 +26,11 @@ gfsh
 In Gfsh
 
 ```shell
-start locator --name=locator1
+start locator --name=locator1 --initial-heap=1g --max-heap=1g --J=-Dgemfire.statistic-archive-file=locator.gfs --J=-D-gemfire.statistic-sampling-enabled=true --J=-Dgemfire.archive-disk-space-limit=5 --J=-Dgemfire.archive-file-size-limit=1 --J=-Dgemfire.conserve-sockets=false
 configure pdx --read-serialized=true --disk-store=DEFAULT
-start server --name=server1 --start-rest-api=true --http-service-port=8000 --http-service-bind-address=localhost
+start server --name=server1 --locators=localhost[10334] --J=-XX:+UseG1GC --J=-XX:+PrintGCDetails --J=-XX:MaxGCPauseMillis=40  --J=-Xms3g --J=-Xmx3g   --use-cluster-configuration=true  --start-rest-api=true --http-service-port=8000 --http-service-bind-address=localhost --statistic-archive-file=server1.gfs --J=-Dgemfire.log-disk-space-limit=3   --J=-Dgemfire.log-file-size-limit=1 --J=-Dgemfire.statistic-archive-file=server1.gfs --J=-D-gemfire.statistic-sampling-enabled=true  --J=-Dgemfire.archive-file-size-limit=1 --J=-Dgemfire.conserve-sockets=false
 ```
+
 
 Create Region in Gfsh
 
